--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/platform-socket.io": "^10.4.8",
     "@nestjs/websockets": "^10.4.8",
     "amqplib": "^0.10.4",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "mongoose": "^8.8.1",
