--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "class-validator": "^0.14.1",
     "mongoose": "^8.8.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
