--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,7 +51,7 @@ jobs:
         run: npm install
 
       - name: Run Tests
-        run: npm run test:ci
+        run: npx jest --ci
 
   # Step 3: Deploy Docker container to server
   deploy:
