--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,10 +45,16 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: '20.17.0'
+
+      - name: Clear npm cache
+        run: npm cache clean --force
 
       - name: Install Dependencies
         run: npm install
+
+      - name: List all npm scripts
+        run: npm run
 
       - name: Run Tests
         run: npm run test:ci
