--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -57,7 +57,7 @@ jobs:
         run: npm run
 
       - name: Run Tests
-        run: npm run test:ci
+        run: npx jest --ci --reporters=default --reporters=jest-stare
 
   # Step 3: Deploy Docker container to server
   deploy:
